--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ WORKERS=4
 RELOAD=true
 
 # CORS Configuration
-CORS_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
+CORS_ORIGINS=http://localhost:5173
 
 # Security Configuration
 SECRET_KEY=your-secret-key-here
