--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.0",
     "animate.css": "^4.1.1",
-    "framer-motion": "^11.0.3"
+    "dotenv": "^17.2.3",
+    "framer-motion": "^11.0.3",
+    "vue": "^3.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.0",
