--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,3 +9,8 @@ beautifulsoup4==4.13.4
 selenium==4.24.0
 tldextract==5.1.2
 huepy==1.2.1
+httpx==0.27.0
+netaddr==1.2.1
+netifaces==0.11.0
+loguru==0.7.3
+stamina==25.2.0
