--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -12,6 +12,12 @@ services:
     healthCheckPath: /
     envVars:
       - key: CORS_ORIGINS
-        value: https://matrix-audit.netlify.app
+        value: https://matrix-audit.netlify.app,http://localhost:5173,http://localhost:3000
       - key: ENVIRONMENT
         value: production
+      - key: DEBUG
+        value: false
+      - key: LOG_LEVEL
+        value: INFO
+      - key: SCAN_TIMEOUT
+        value: 120
