--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -3,21 +3,15 @@ services:
     name: matrix-backend
     runtime: docker
     repo: https://github.com/aboodmidani/matrix.git
-    branch: main
+    branch: master
     region: oregon
     plan: free
     dockerfilePath: ./backend/Dockerfile
-    buildCommand: docker build -t matrix-backend ./backend
-    startCommand: docker run -p $PORT:8000 --env-file .env matrix-backend
-    healthCheckPath: /
+    healthCheckPath: /health
     envVars:
-      - key: CORS_ORIGINS
-        value: https://matrix-audit.netlify.app,http://localhost:5173,http://localhost:3000
       - key: ENVIRONMENT
         value: production
       - key: DEBUG
         value: false
       - key: LOG_LEVEL
         value: INFO
-      - key: SCAN_TIMEOUT
-        value: 120
