--- a/frontend/netlify.toml.example
+++ b/frontend/netlify.toml.example
@@ -1,16 +1,13 @@
 [build]
-  # Build command for Vite
   command = "npm run build"
-  # Publish directory (where Vite outputs built files)
   publish = "dist"
 
 [build.environment]
-  # Node version
   NODE_VERSION = "18"
-  # API URL for production - Replace with your Render backend URL
-  VITE_API_URL = "https://your-render-app.onrender.com"
+  # Set your Render backend URL here (or in Netlify dashboard as VITE_API_URL)
+  VITE_API_URL = "https://matrix-9s9s.onrender.com"
 
-# Headers for security and performance
+# ── Security & performance headers ───────────────────────────────────────────
 [[headers]]
   for = "/*"
   [headers.values]
@@ -18,16 +15,25 @@
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
-    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.jsdelivr.net; img-src 'self' data: https:; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://your-render-app.onrender.com https://ip-api.com https://services.nvd.nist.gov https://cdn.jsdelivr.net https://img.icons8.com; object-src 'none'; base-uri 'self'; form-action 'self';"
+    Content-Security-Policy = """
+      default-src 'self';
+      script-src 'self' 'unsafe-inline';
+      style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+      font-src 'self' https://fonts.gstatic.com;
+      img-src 'self' data: https:;
+      connect-src 'self' https://matrix-9s9s.onrender.com;
+      object-src 'none';
+      base-uri 'self';
+    """
 
-# SPA fallback for client-side routing
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
-
-# Cache static assets
+# Cache immutable assets forever
 [[headers]]
   for = "/assets/*"
   [headers.values]
     Cache-Control = "public, max-age=31536000, immutable"
+
+# SPA fallback — all routes → index.html
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
